@@ -254,7 +254,6 @@ int main(int argc, const char ** argv)
     if (singleDash)
 	fprintf(stdout, " -");
 
-/*@-boundsread@*/
     rest = poptGetArgs(optCon);
     if (rest) {
 	fprintf(stdout, " rest:");
@@ -263,7 +262,6 @@ int main(int argc, const char ** argv)
 	    rest++;
 	}
     }
-/*@=boundsread@*/
 
     fprintf(stdout, "\n");
 
